optimal and codegolfed solutions to day 1

--- a/2024/day1/day1.ipynb
+++ b/2024/day1/day1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Part 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "--- Day 1: Historian Hysteria ---\n",
     "The Chief Historian is always present for the big Christmas sleigh launch, but nobody has seen him in months! Last anyone heard, he was visiting locations that are historically significant to the North Pole; a group of Senior Historians has asked you to accompany them as they check the places they think he was most likely to visit.\n",
     "\n",
@@ -62,27 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list1, list2 = [4,3,5,3,9,3], [3,4,2,1,3,3]"
+    "list1, list2 = [3,4,2,1,3,3], [4,3,5,3,9,3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "inp = open('input.txt', 'r').read().replace('   ','\\n').split('\\n')\n",
     "list1 = list(map(int, inp[::2]))\n",
-    "list2 = list(map(int, inp[1:][::2]))\n"
+    "list2 = list(map(int, inp[1::2]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Golf of the Solution"
+    "Golf the Solution"
    ]
   },
   {
@@ -127,25 +134,154 @@
     {
      "data": {
       "text/plain": [
-       "39687"
+       "1651298"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
-    "i=[*map(int,re.findall(r'\\w+',open('input.txt').read()))]\n"
+    "# get all unsorted pairs: [map(int,l.split())for l in open('input.txt')]\n",
+    "# l=open('input.txt').read().replace('\\n','   ').split('   ')\n",
+    "# a,b=map(sorted,[l[::2],l[1::2]])\n",
+    "\n",
+    "# 94 bytes:\n",
+    "sum(abs(a-b)for a,b in zip(*map(sorted,zip(*[map(int,l.split())for l in open('input.txt')]))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- Part Two ---\n",
+    "Your analysis only confirmed what everyone feared: the two lists of location IDs are indeed very different.\n",
+    "\n",
+    "Or are they?\n",
+    "\n",
+    "The Historians can't agree on which group made the mistakes or how to read most of the Chief's handwriting, but in the commotion you notice an interesting detail: a lot of location IDs appear in both lists! Maybe the other numbers aren't location IDs at all but rather misinterpreted handwriting.\n",
+    "\n",
+    "This time, you'll need to figure out exactly how often each number from the left list appears in the right list. Calculate a total similarity score by adding up each number in the left list after multiplying it by the number of times that number appears in the right list.\n",
+    "\n",
+    "Here are the same example lists again:\n",
+    "\n",
+    "3   4\n",
+    "4   3\n",
+    "2   5\n",
+    "1   3\n",
+    "3   9\n",
+    "3   3\n",
+    "For these example lists, here is the process of finding the similarity score:\n",
+    "\n",
+    "The first number in the left list is 3. It appears in the right list three times, so the similarity score increases by 3 * 3 = 9.\n",
+    "The second number in the left list is 4. It appears in the right list once, so the similarity score increases by 4 * 1 = 4.\n",
+    "The third number in the left list is 2. It does not appear in the right list, so the similarity score does not increase (2 * 0 = 0).\n",
+    "The fourth number, 1, also does not appear in the right list.\n",
+    "The fifth number, 3, appears in the right list three times; the similarity score increases by 9.\n",
+    "The last number, 3, appears in the right list three times; the similarity score again increases by 9.\n",
+    "So, for these example lists, the similarity score at the end of this process is 31 (9 + 4 + 0 + 0 + 9 + 9)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Though Process\n",
+    "Get a dictionary of the right list with the key value pairing being the number itself and the number of times it appears. We can ignore the relevance of the numbers in the first list to the second list because numbers in the first list that don't appear in the second list will be ignored (n * 0 = 9). Then cycle through the left list, checking against this dictionary, generating a new list. Finally, sum this new list.\n",
+    "\n",
+    "This is O(n) time, since we're iterating through the second list once to make the count dictionary, and the first list once to sum up the multiplied values between the count_dict and the first list values.\n",
+    "This is O(n) space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp = open('input.txt', 'r').read().replace('   ','\\n').split('\\n')\n",
+    "list1 = list(map(int, inp[::2]))\n",
+    "list2 = list(map(int, inp[1::2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21306195"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_dict = {}\n",
+    "for value in list2:\n",
+    "    if value not in count_dict:\n",
+    "        count_dict[value] = 0\n",
+    "    count_dict[value] += 1\n",
+    "\n",
+    "l = 0\n",
+    "for value in list1:\n",
+    "    l+=value * count_dict.get(value,0)\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) The answer is 21306195"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Golf the Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21306195"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 87 bytes\n",
+    "a,b=zip(*[map(int,l.split())for l in open('input.txt')]);sum([b.count(d)*d for d in a])"
+   ]
   }
  ],
  "metadata": {
